# serial

./: .gitignore  CMakeLists.txt  LICENSE  NOTES  README.md  TODO  coverage.sh  example.cpp  sandbox.cpp  stable.cpp  stress.cpp
examples/: example.cpp  small-example.cpp  small-example.json
include/serial/: BasicRef-inl.h  BasicRef.h  Blueprint-inl.h  Blueprint.h  Constants.h  Header.h  MetaHelpers.h  Reader-inl.h  Reader.h  Ref-inl.h  Ref.h  Referable-inl.h  Referable.h  ReferableBase.h  Registry-inl.h  Registry.h  Serial-inl.h  Serial.h  SerialFwd.h  Traverse-inl.h  Traverse.h  TypeId.h  TypeName.h  TypeTraits.h  TypedRef-inl.h  TypedRef.h  Variant-inl.h  Variant.h  Version-inl.h  Version.h  Writer-inl.h  Writer.h
include/serial/internal/: Variant.h
include/serial/variant/: Variant.h
src/: Blueprint.cpp  Constants.cpp  Reader.cpp  Ref.cpp  Registry.cpp  Serial.cpp  Version.cpp  Writer.cpp
test/: RgbColor.cpp  RgbColor.h  TestBasicRef.cpp  TestBlueprint.cpp  TestConstants.cpp  TestMeta.cpp  TestReader.cpp  TestRef.cpp  TestRegistry.cpp  TestSerial.cpp  TestTypedRef.cpp  TestVariant.cpp  TestWriter.cpp  main.cpp
